# chenchen

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  README.md  SETUP_NOTES.md  package-lock.json  package.json  pnpm-lock.yaml  test-layout.html  update_forks.sh  vite.config.js
.github/workflows/: release.yml
.specify/memory/: constitution.md
config/: providers.json
docs/: linux-webview-positioning-fix.md  privacy-policy.md  testing-guide.md
scripts/: bump-version.js  release.sh
specs/001-multi-llm-prompt/: data-model.md  plan.md  quickstart.md  spec.md  (+2 more)
src/: app.css  app.html  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-webviews.json
src-tauri/config/: providers.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  logging.rs  main.rs  state.rs  types.rs
src-tauri/src/injection/: injector.rs  mod.rs  script_builder.rs  stealth.js  stealth_macos.js
src-tauri/src/layout/: calculator.rs  mod.rs
src-tauri/src/providers/: config.rs  manager.rs  mod.rs
src-tauri/src/status/: mod.rs  tracker.rs
src-tauri/src/webview/: manager.rs  mod.rs
src-tauri/tests/: auth_tests.rs  layout_tests.rs  privacy_tests.rs  webview_tests.rs
src-tauri/tests/contract/: auth_check_test.rs  injector_test.rs  mod.rs  provider_manager_test.rs  webview_manager_test.rs
src-tauri/tests/integration/: logging_format_test.rs  privacy_test.rs  success_rate_test.rs
src-tauri/tests/unit/: layout_calculator_test.rs  mod.rs  script_generation_test.rs
tests/: setup.ts
(+18 files in other folders)
