[package]
name = "chenchen"
version = "0.1.5"
description = "Multi-LLM Prompt Desktop App"
authors = ["ChenChen Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chenchen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
schemars = "0.8"

[dev-dependencies]
mockall = "0.13"
pretty_assertions = "1"
tempfile = "3"

# Git patches for Linux multiwebview positioning fix
# See: https://github.com/tauri-apps/tauri/issues/10420
[patch.crates-io]
tao = { git = "https://github.com/Benjaminlooi/tao.git" }
tauri-runtime = { git = "https://github.com/Benjaminlooi/tauri.git" }
tauri-runtime-wry = { git = "https://github.com/Benjaminlooi/tauri.git" }
tauri-utils = { git = "https://github.com/Benjaminlooi/tauri.git" }
